# sde-finance

./: .gitignore  .matplotlibrc  README.md  pyproject.toml
finsde/: core.py
finsde/models/: discrete_sde.py  gru.py  lstm.py  sde.py  transformer.py
finsde/utils/: callbacks.py  dataloader.py
notebooks/: sde_diagnostic_plots.ipynb  volatility.ipynb
scripts/: merge_csv.py  train.py  train.sh
scripts/config/: config.yaml
scripts/config/callbacks/: default.yaml  discrete_sde_1samp.yaml  discrete_sde_32samp.yaml  discrete_sde_8samp.yaml  multistock.yaml  multistock_8samp.yaml
scripts/config/datamodule/: multistocks_26.yaml  stocks_5.yaml  stocks_50.yaml  stocks_50_eval.yaml  stocks_50_eval_10.yaml  stocks_50_eval_20.yaml
scripts/config/loggers/: default.yaml
scripts/config/model/: discrete_sde.yaml  discrete_sde_post_const.yaml  discrete_sde_post_full.yaml  discrete_sde_prior_const.yaml  discrete_sde_prior_full.yaml  discrete_sde_prior_ic.yaml  gru.yaml  lstm.yaml  sde.yaml  transformer.yaml
scripts/config/trainer/: default.yaml
